[gd_scene load_steps=17 format=2]

[ext_resource path="res://pop ups/pomodoro/X.png" type="Texture" id=1]
[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Script/quizGUT.gd" type="Script" id=3]
[ext_resource path="res://imagens/bloco-gantt.png" type="Texture" id=4]
[ext_resource path="res://imagens/kanban.jpg" type="Texture" id=5]
[ext_resource path="res://pop ups/relógio/quizz.png" type="Texture" id=6]
[ext_resource path="res://pop ups/relógio/x escuro.png" type="Texture" id=7]
[ext_resource path="res://pomodoro/pixil-frame-0 (3).png" type="Texture" id=8]
[ext_resource path="res://pomodoro/pixil-frame-0 (2).png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=8]

[sub_resource type="Theme" id=11]

[sub_resource type="DynamicFont" id=12]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=13]

[sub_resource type="DynamicFont" id=14]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 60
extra_spacing_top = 6
extra_spacing_bottom = 12
extra_spacing_char = -2
extra_spacing_space = 2
font_data = ExtResource( 2 )

[node name="gut" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="popup" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -226.5
margin_right = 342.0
margin_bottom = 226.5
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/close_h_ofs = 70
custom_constants/close_v_ofs = -20
custom_icons/close_highlight = ExtResource( 1 )
custom_icons/close = ExtResource( 7 )
custom_styles/panel = SubResource( 8 )

[node name="pag3" type="Sprite" parent="popup"]
modulate = Color( 1, 1, 1, 0.988235 )
show_behind_parent = true
position = Vector2( 341.641, 225.188 )
scale = Vector2( 0.255135, 0.247016 )
texture = ExtResource( 6 )

[node name="voltar2" type="TextureButton" parent="popup/pag3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2534.04
margin_top = -457.682
margin_right = -2483.04
margin_bottom = -406.682
rect_scale = Vector2( 3.23959, 3.23959 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
flip_h = true

[node name="Label3" type="Label" parent="popup/pag3"]
margin_left = -1080.37
margin_top = -593.84
margin_right = 299.628
margin_bottom = -444.84
rect_scale = Vector2( 1.59766, 2.36107 )
theme = SubResource( 11 )
custom_colors/font_color = Color( 1, 0.27451, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "Agora que você conhece o método GUT, 
use o laser para eliminar os inimigos!
(e os pontos de critério para 
eliminar suas tarefas)"
align = 1
valign = 1

[node name="Label4" type="Label" parent="popup/pag3"]
margin_left = -586.517
margin_top = 134.858
margin_right = 613.487
margin_bottom = 245.858
rect_scale = Vector2( 1.4038, 2.07458 )
focus_mode = 1
theme = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Utilize o botão Z para atirar laser"
align = 1
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="popup/pag3"]
position = Vector2( -892.237, 187.486 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )

[node name="pag2" type="Sprite" parent="popup"]
modulate = Color( 1, 1, 1, 0.988235 )
show_behind_parent = true
position = Vector2( 1117, 223.5 )
scale = Vector2( 0.255135, 0.247016 )
texture = ExtResource( 6 )

[node name="avancar2" type="TextureButton" parent="popup/pag2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -309.173
margin_top = -454.897
margin_right = -258.173
margin_bottom = -403.897
rect_scale = Vector2( 3.07765, 3.07765 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="voltar1" type="TextureButton" parent="popup/pag2"]
anchor_left = 0.088
anchor_top = 0.823
anchor_right = 0.088
anchor_bottom = 0.823
margin_left = 595.093
margin_top = -1424.68
margin_right = 646.093
margin_bottom = -1373.68
rect_scale = Vector2( 3.23959, 3.23959 )
rect_pivot_offset = Vector2( 901.12, -130.609 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
flip_h = true

[node name="Label" type="Label" parent="popup/pag2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2416.45
margin_top = -1757.19
margin_right = -272.454
margin_bottom = -1542.19
text = "nkkwff"

[node name="Kanban" type="Sprite" parent="popup/pag2"]
position = Vector2( 21.0046, -79.7033 )
scale = Vector2( 1.78647, 1.84519 )
texture = ExtResource( 5 )

[node name="pag1" type="Sprite" parent="popup"]
modulate = Color( 1, 1, 1, 0.988235 )
show_behind_parent = true
position = Vector2( -397, 233.5 )
scale = Vector2( 0.255135, 0.247016 )
texture = ExtResource( 6 )

[node name="avancar" type="TextureButton" parent="popup/pag1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -273.898
margin_top = -430.606
margin_right = -222.898
margin_bottom = -379.606
rect_scale = Vector2( 2.59187, 2.59187 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="popup/pag1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1965.71
margin_top = -1141.85
margin_right = -1323.71
margin_bottom = -1063.85
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Método GUT "
align = 1

[node name="Label2" type="Label" parent="popup/pag1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2549.72
margin_top = -927.287
margin_right = -155.716
margin_bottom = -444.287
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "Trata-se de uma matriz baseada em três 
pontos principais: GRAVIDADE, URGÊNCIA 
E TENDÊNCIA.
É necessário atribuir notas de 1 a 5 para
cada uma das suas demandas e começar
pelas tarefas de notas mais altas. "
align = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="popup/pag1"]
position = Vector2( 1.4071, -435.956 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 10 )

[connection signal="popup_hide" from="popup" to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="popup/pag3/voltar2" to="." method="_on_voltar2_pressed"]
[connection signal="pressed" from="popup/pag2/avancar2" to="." method="_on_avancar2_pressed"]
[connection signal="pressed" from="popup/pag2/voltar1" to="." method="_on_voltar1_pressed"]
[connection signal="pressed" from="popup/pag1/avancar" to="." method="_on_avancar_pressed"]
